fixed line spacing for tabs

--- a/app/assets/stylesheets/application/components/tags.scss
+++ b/app/assets/stylesheets/application/components/tags.scss
@@ -18,7 +18,6 @@
     white-space: nowrap;
     @include breakpoint(medium) {
       font-size: 1rem;
-      margin: 0 1rem 1rem 0;
     }
     &:hover {
       color: white;
